# services/auth/src/v1/routes/index.ts
@@ -1,10 +1,18 @@
 import { Router } from 'express';
-import { register, login, logout } from '@/v1/controllers';
+import {
+  register,
+  login,
+  logout,
+  assignRole,
+  resetPassword,
+} from '@/v1/controllers';
 
 const router = Router();
 
 router.post('/auth/register', register);
 router.post('/auth/login', login);
 router.post('/auth/logout', logout);
+router.post('/auth/assign-role', assignRole);
+router.post('/auth/reset-password', resetPassword);
 
 export default router;
